# similarity-trait-rust-crate

./: Cargo.toml  README.md  cspell.json  llms.json  llms.txt
examples/: absolute_difference.rs  hamming_distance_with_a_collection_of_words.rs  hamming_distance_with_a_pair_of_words.rs  levenshtein_distance.rs  percent_change.rs  population_standard_deviation.rs
src/: lib.rs
