[package]
name = "similarity-trait"
description = "Similarity trait Rust crate: compare input values, such as two or more items, then return an output value, such as a mesure of similarity, or correlation, or overlap."
version = "2.0.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/sixarm/similarity-trait-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0 OR BSD-3-Clause"
keywords = ["similar", "compare", "correlate", "matching", "same"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]
include = ["src/**/*", "LICENSE.md", "README.md", "llms.txt", "llms.json"]
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]

[dependencies]
